--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 119,
    "id": "6ec494c9",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 120,
    "id": "bcddf850",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "37105326-eb41-43bb-831c-173751b4d62b",
+       "ref": "7f6d3f36-c8fb-4af3-98f6-b08e742382ce",
        "rows": [
         [
          "0",
@@ -320,7 +320,7 @@
        "4              121.0     16.37  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 121,
    "id": "42f5f31e",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "(28242, 7)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 122,
    "id": "d39c470f",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 123,
    "id": "1b380ff2",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e3d94142-6a79-43c8-8570-192a9c62d0e8",
+       "ref": "27e87b54-d466-4218-98a4-c42000f00a99",
        "rows": [
         [
          "count",
@@ -643,7 +643,7 @@
        "max        367778.000000     30.650000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 124,
    "id": "0279ff9d",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 125,
    "id": "9db6e483",
    "metadata": {},
    "outputs": [
@@ -704,7 +704,7 @@
        " 'avg_temp']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 126,
    "id": "85f9fcd5",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
        "(28242, 5)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 127,
    "id": "0f334d12",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 128,
    "id": "1fe6f947",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
        "np.int64(2323)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 129,
    "id": "0df33f81",
    "metadata": {},
    "outputs": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 130,
    "id": "bb5188e3",
    "metadata": {},
    "outputs": [],
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 131,
    "id": "6e63ae6d",
    "metadata": {},
    "outputs": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 132,
    "id": "220f7aec",
    "metadata": {},
    "outputs": [
@@ -956,7 +956,7 @@
        "[]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,19 +980,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 133,
    "id": "bdce1890",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Area    0.0\n",
-       "Item    0.0\n",
-       "dtype: float64"
+       "Series([], dtype: float64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 134,
    "id": "79b9eee9",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1023,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,6 +1052,401 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "49cd99fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ae7f895",
+   "metadata": {},
+   "source": [
+    "## **Modeling**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "8fc78692",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Year",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "hg/ha_yield",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "average_rain_fall_mm_per_year",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pesticides_tonnes",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "avg_temp",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "5304bc5d-17b6-4d1f-87bf-822169da8e6a",
+       "rows": [
+        [
+         "0",
+         null,
+         "36613.0",
+         "1485.0",
+         "121.0",
+         "16.37"
+        ],
+        [
+         "1",
+         null,
+         "66667.0",
+         "1485.0",
+         "121.0",
+         "16.37"
+        ],
+        [
+         "2",
+         null,
+         "23333.0",
+         "1485.0",
+         "121.0",
+         "16.37"
+        ],
+        [
+         "3",
+         null,
+         "12500.0",
+         "1485.0",
+         "121.0",
+         "16.37"
+        ],
+        [
+         "4",
+         null,
+         "7000.0",
+         "1485.0",
+         "121.0",
+         "16.37"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>hg/ha_yield</th>\n",
+       "      <th>average_rain_fall_mm_per_year</th>\n",
+       "      <th>pesticides_tonnes</th>\n",
+       "      <th>avg_temp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36613.0</td>\n",
+       "      <td>1485.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>16.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>66667.0</td>\n",
+       "      <td>1485.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>16.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23333.0</td>\n",
+       "      <td>1485.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>16.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12500.0</td>\n",
+       "      <td>1485.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>16.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>1485.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>16.37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  hg/ha_yield  average_rain_fall_mm_per_year  pesticides_tonnes  \\\n",
+       "0   NaN      36613.0                         1485.0              121.0   \n",
+       "1   NaN      66667.0                         1485.0              121.0   \n",
+       "2   NaN      23333.0                         1485.0              121.0   \n",
+       "3   NaN      12500.0                         1485.0              121.0   \n",
+       "4   NaN       7000.0                         1485.0              121.0   \n",
+       "\n",
+       "   avg_temp  \n",
+       "0     16.37  \n",
+       "1     16.37  \n",
+       "2     16.37  \n",
+       "3     16.37  \n",
+       "4     16.37  "
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop y value from the yield_copy for splitting dependant and independent variables\n",
+    "#yield_copy.drop(columns=yield_copy['hg/ha_yield'], inplace=True)\n",
+    "yield_copy.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "7ff16ea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28242, 5)"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yield_copy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "810e9260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape before dropping y value: (28242, 7)\n",
+      "shape after dropping y value: (28242, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#yield_copy.columns.tolist()\n",
+    "\n",
+    "print(f'shape before dropping y value: {yield_df.shape}')\n",
+    "print(f'shape after dropping y value: {yield_copy.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "0d006412",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Year',\n",
+       " 'hg/ha_yield',\n",
+       " 'average_rain_fall_mm_per_year',\n",
+       " 'pesticides_tonnes',\n",
+       " 'avg_temp']"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yield_copy.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "0342199a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Area',\n",
+       " 'Item',\n",
+       " 'Year',\n",
+       " 'hg/ha_yield',\n",
+       " 'average_rain_fall_mm_per_year',\n",
+       " 'pesticides_tonnes',\n",
+       " 'avg_temp']"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yield_df.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "2bc0e61b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Area', 'Item']"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_df2 = yield_df.select_dtypes(include=[np.object_]).columns.tolist()\n",
+    "categorical_df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "1ab17b43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "encoder =OneHotEncoder(handle_unknown='ignore') \n",
+    "results = encoder.fit_transform(yield_df[categorical_df2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "c93b553b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., ..., 0., 0., 0.],\n",
+       "       [1., 0., 0., ..., 0., 0., 0.],\n",
+       "       [1., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 1., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 1., 0.]], shape=(28242, 111))"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "fdce6a48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = yield_df['hg/ha_yield']\n",
+    "X = yield_df.drop(columns=['hg/ha_yield'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "3e6fd5c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "0a7b26be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin_reg = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c5aeff",
    "metadata": {},
    "outputs": [],
    "source": []
